# AI-Quest-Python

./: .gitignore  Db_relationship.txt  New Text Document (2).txt  bash.exe.stackdump  notes.txt  permission.txt
Notes/: notes.txt
assignment 00/: main.py  manage.py  pyproject.toml  requirements.txt
assignment 02/: main.py
assignment 03/: main.py
assignment 04/: main.py
assignment 05/: db.sqlite3
assignment 08/: db.sqlite3
assignment 10/: index.html
assignment 11/: db.sqlite3
assignment 12/: Django security.txt  Paginator in django.txt  db.sqlite3  notes.txt
assignment 13/: built_absolute_url.txt  db.sqlite3  main.py  pyproject.toml
assignment 14/: ajax.txt  main.py  pyproject.toml  requirements.txt
assignment 15/: db.sqlite3  main.py  pyproject.toml  python anywhere.txt
assignment 16/: db.sqlite3  main.py  products-filters.txt  pyproject.toml  python anywhere.txt
assignment 17/: Race_Condition_Notes.txt  api.txt  color.txt  db.sqlite3  life cycle.txt  model manager nodes.txt  notes.txt  orm work flow.txt  requirements.txt
assignment 18/: .gitignore  OAuth2.txt  admin.py  admin.txt  db.sqlite3  loop.txt  main.py  models.Manager.txt  models.py  models.txt  orm work flow.txt  requirements.txt  text.txt
assignment 21/: .env  pyproject.toml  requirements.txt
assignment 21/chat/: consumers.py  routing.py  urls.py  views.py
assignment 21/config/: asgi.py  settings.py  urls.py
assignment 21/static/: main.js
assignment 21/staticfiles/: main.js
assignment 21/templates/: base.html
assignment 21/templates/chat/: chat.html
(+513 files in other folders)
