[project]
name = "assignment-21"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "django==4.2.16",
    "pillow==12.1.1",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
